# forknife

./: .gitignore  LICENSE  README.md  meson.build
resources/: forknife.css  resource.gresource.xml
src/: main.c
